<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPost">

    <EditText
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:hint="@string/title"
        android:lines="1" />


    <EditText
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:hint="@string/content"
        android:lines="4" />


    <Button
        android:id="@+id/post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/post" />

</LinearLayout>