<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="15dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/app_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_layout"
            android:ems="19"
            android:fontFamily="sans-serif"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:textColorHint="#e0e0e0"
            android:textCursorDrawable="@drawable/color_cursor" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/app_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/app_username"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edittext_layout"
            android:ems="19"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:textColorHint="#e0e0e0"
            android:textCursorDrawable="@drawable/color_cursor" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"

        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"

        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="166dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"

        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
    <Spinner
        android:id="@+id/friends_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>